# tessera

./: .editorconfig  .gitignore  .luacheckrc  Cargo.toml  LICENSE  autorun.cmd  autorun.ps1  autorun.sh  build.rs  build.sh  build_release.cmd  build_release.ps1  build_release.sh  cbindgen.toml  feature-list  generate_header.sh  manual.md  notes.md  readme.md  run.sh  rustfmt.toml  todo  todo.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: bench.rs
lua/: audiolib.lua  backend.lua  box.lua  build.lua  channel.lua  channel_handler.lua  clipboard.lua  command.lua  command_channel.lua  conf.lua  device.lua  device_list.lua  devicelist.lua  engine.lua  file.lua  header.lua  keyboard.lua  log.lua  logger.lua  main.lua  menu.lua  midi.lua  midiHandler.lua  midi_handler.lua  midi_handler_new.lua  midilib.lua  mouse.lua  note_input.lua  parameter.lua  parameter_group.lua  pitch.lua  processor.lua  resources.lua  roll.lua  run.lua  save.lua  selection.lua  settings_handler.lua  slider.lua  theme.lua  (+8 more)
lua/default/: empty_project.lua  project.lua  theme.lua  tuning_presets.lua
lua/lib/: binser.lua  cstring.lua  errorhandler.lua  hsluv.lua  lume.lua  lurker.lua  profile.lua  profile2.lua  rtmidi_ffi.lua  run.lua  serialize.lua  strict.lua  utf8.lua  wav.lua  wav_save.lua
lua/res/: dejavu_normal.fnt  dejavu_small.fnt  font_notes.pdn
lua/res/font/: inter.fnt
lua/settings/: example_setup.lua  setup.lua  theme.lua
lua/tools/: adjust_velocity.lua  drag.lua  drag_end.lua  edit.lua  pan.lua  pen.lua  scale.lua  select_rect.lua  set_transport_time.lua  tempo.lua
lua/ui/: button.lua  channel.lua  checkbox.lua  collapse.lua  collapse_device.lua  dropdown.lua  layout.lua  meter.lua  parameter_group.lua  selector.lua  slider.lua  slider_value.lua  toggle.lua  toggle_small.lua  ui.lua  widgets.lua
lua/views/: canvas.lua  canvas_menu.lua  channel_settings.lua  channels.lua  channelview.lua  debug.lua  empty.lua  log.lua  panner.lua  pannerview.lua  parameters.lua  parameterview.lua  project_settings.lua  scope.lua  scopeview.lua  settings.lua  song.lua  songview.lua  test_pad.lua  testpad.lua  testpadview.lua  transform.lua  ui_test.lua  uitestview.lua
rust/: audio.rs  defs.rs  device.rs  dsp.rs  effect.rs  instrument.rs  lib.rs  log.rs  lua.rs  midi.rs  render.rs  scope.rs
rust/dsp/: delayline.rs  env.rs  onepole.rs  resample.rs  resample_fir.rs  simper.rs  skf.rs  smooth.rs
rust/effect/: convolve.rs  delay.rs  drive.rs  equalizer.rs  gain.rs  pan.rs  reverb.rs  testfilter.rs  tilt.rs  wide.rs
rust/instrument/: analog.rs  epiano.rs  fm.rs  fm2.rs  pluck.rs  polysine.rs  sine.rs  wavetable.rs  wavetable_res.rs
scripts/: fir_calc.py  wavetable.py
src/: api.rs  app.rs  audio.rs  channel.rs  context.rs  defs.rs  device.rs  dsp.rs  effect.rs  embed.rs  engine.rs  ffi.rs  instrument.rs  lib.rs  log.rs  main.rs  math.rs  message.rs  meters.rs  metronome.rs  midi.rs  no_denormals.rs  opengl.rs  pan.rs  param.rs  render.rs  scope.rs  text.rs  voice_manager.rs  vst3.rs  worker.rs
src/api/: audio.rs  backend.rs  graphics.rs  icon.rs  icons_res.rs  image.rs  keycodes.rs  midi.rs  mouse.rs  project.rs
src/dsp/: atomic_float.rs  delayline.rs  env.rs  onepole.rs  resample.rs  resample_fir.rs  simper.rs  skf.rs  smooth.rs
src/effect/: chorus.rs  compressor.rs  convolve.rs  decimate.rs  delay.rs  drive.rs  equalizer.rs  gain.rs  limiter.rs  pan.rs  phaser.rs  reverb.rs  testfilter.rs  tilt.rs  tremolo.rs  wide.rs
src/instrument/: analog.rs  epiano.rs  fm.rs  pluck.rs  polysine.rs  sampler.rs  sine.rs  vst_instrument.rs  vst_wrapper.rs  wavetable.rs  wavetable_res.rs
src/scripts/: wavetable.py
src/vst3/: error.rs  event.rs  parameter.rs  scan.rs  state.rs  util.rs  vst.rs
tessera/: Cargo.toml
tessera/src/: api.rs  backend.rs  keycodes.rs  love_api.rs  love_config.rs  main.rs  opengl.rs  text.rs
tessera/src/api/: keycodes.rs  love.rs  mouse.rs
tessera/src/backend/: mod.rs  opengl.rs
tessera_audio/: Cargo.toml
tessera_audio/benches/: bench.rs
tessera_audio/src/: audio.rs  context.rs  dsp.rs  lib.rs  log.rs  lua.rs  midi.rs  render.rs  scope.rs
tessera_audio/src/dsp/: env.rs  simper.rs
tessera_audio/src/effect/: compressor.rs  convolve.rs  drive.rs
tessera_audio/src/instrument/: polysine.rs
tessera_audio/tests/: test_approx.rs
tests/: test_approx.rs
