[package]
name = "tessera"
version = "0.1.0"
edition = "2024"


[features]
fpu_traps = []


[lib]
doctest = false

# Pull in the right cpal features depending on platform
# [target.'cfg(target_os = "windows")'.dependencies]
# cpal = { version = "0.16", features = ["asio"], git = "https://github.com/RustAudio/cpal.git", rev = "54e0b76677ed8c9c7f1f1dfc9de05f104278444c" }
# [target.'cfg(target_os = "macos")'.dependencies]
# cpal = { version = "0.16", git = "https://github.com/RustAudio/cpal.git", rev = "54e0b76677ed8c9c7f1f1dfc9de05f104278444c" }
# [target.'cfg(target_os = "linux")'.dependencies]
# cpal = { version = "0.16", features = ["jack"], git = "https://github.com/RustAudio/cpal.git", rev = "54e0b76677ed8c9c7f1f1dfc9de05f104278444c" }


[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.16", features = ["asio"], git = "https://github.com/sin-tel/cpal.git", rev = "3b125d256f8aab6146ff670b296f626a89e9862a" }
[target.'cfg(target_os = "macos")'.dependencies]
cpal = { version = "0.16", git = "https://github.com/sin-tel/cpal.git", rev = "3b125d256f8aab6146ff670b296f626a89e9862a" }
[target.'cfg(target_os = "linux")'.dependencies]
cpal = { version = "0.16", features = ["jack"], git = "https://github.com/sin-tel/cpal.git", rev = "3b125d256f8aab6146ff670b296f626a89e9862a" }

[dependencies]
# cpal = { version = "0.16", features = ["asio"], path = "../cpal_proj/cpal" }
assert_no_alloc = {version = "1.1", features = ["warn_debug"]}
no_denormals = "0.3"
ringbuf = "0.4"
fastrand = "2.0"
bit_mask_ring_buf = "0.6"
bencher = "0.1"
rustfft = "6.4"
realfft = "3.5"
fft-convolver = "0.3"
hound = "3.5"
midir = "0.10"
num-complex = "0.4"

standard_log = { package = "log", version = "0.4" }
simplelog = "0.12"
# log-panics = { version = "2", features = ["with-backtrace"]}
log-panics = { version = "2"}

mlua = { version = "0.11", features = ["luajit", "vendored", "serde"] }

winit = "0.30"
femtovg = {version="0.19.3", default-features = false, features=["image-loading"] }
image = { version = "0.25", default-features = false, features = ["png"] }
glutin =  "0.32.0"
glutin-winit = "0.5"
raw-window-handle = "0.6"

cosmic-text = "0.15"
swash = "0.2"
unicode-script = "0.5.5"
parking_lot = "0.12.5"
rfd = "0.16"
okhsl = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
# rust-embed = { version = "8.9", features = ["debug-embed"] }
rust-embed = "8.9"
svgtypes = "0.16.0"
semver = "1.0.27"
open = "5.3"

[[bench]]
name = "bench"
harness = false

# [profile.dev.package."*"]
# opt-level = 3

[profile.release]
# debug = 1 # for profiling
# lto = "thin"
# codegen-units = 1
# panic = "abort"

[build-dependencies]
winresource = "0.1.28"
