[package]
name = "tessera"
version = "0.1.1"
edition = "2024"
authors = ["sintel"]
license = "MIT"
repository = "https://github.com/Sin-tel/tessera"
homepage = "https://github.com/Sin-tel/tessera"
readme = "readme.md"
description = "Experimental DAW."
categories = ["multimedia::audio"]

[features]
fpu_traps = []

[lib]
doctest = false

# Pull in the right cpal features depending on platform
[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.17", features = ["asio"], git = "https://github.com/sin-tel/cpal.git", rev = "e0a61fd3f732f9aa2c9296b6bb831f50e6abac9e" }
[target.'cfg(target_os = "macos")'.dependencies]
cpal = { version = "0.17", git = "https://github.com/sin-tel/cpal.git", rev = "e0a61fd3f732f9aa2c9296b6bb831f50e6abac9e" }
[target.'cfg(target_os = "linux")'.dependencies]
cpal = { version = "0.17", features = ["jack"], git = "https://github.com/sin-tel/cpal.git", rev = "e0a61fd3f732f9aa2c9296b6bb831f50e6abac9e" }

[dependencies]
assert_no_alloc = {version = "1.1", features = ["warn_debug"]}
no_denormals = "0.3"
ringbuf = "0.4"
fastrand = "2.0"
bit_mask_ring_buf = "0.6"
rustfft = "6.4"
realfft = "3.5"
fft_convolution = {version = "0.1", git = "https://github.com/Sin-tel/fft-convolution.git", rev = "ef197e8efb6d9de68df4b4794ca2bcf3b999474e" }
hound = "3.5"
midir = "0.10"
num-complex = "0.4"
halfband = "0.2"
windowfunctions = "0.1"

standard_log = { package = "log", version = "0.4" }
simplelog = "0.12"
# log-panics = { version = "2", features = ["with-backtrace"]}
log-panics = { version = "2"}

mlua = { version = "0.11", features = ["luajit", "vendored", "serde"] }

winit = "0.30"
femtovg = {version="0.19.3", default-features = false, features=["image-loading"] }
image = { version = "0.25", default-features = false, features = ["png"] }
glutin =  "0.32.0"
glutin-winit = "0.5"
raw-window-handle = "0.6"

cosmic-text = "0.15"
swash = "0.2"
unicode-script = "0.5.5"
parking_lot = "0.12.5"
rfd = "0.16"
okhsl = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
# rust-embed = { version = "8.9", features = ["debug-embed"] }
# rust-embed = { version = "8.9", features = ["compression"] }
rust-embed = "8.9"
svgtypes = "0.16"
semver = "1.0"
open = "5.3"
ureq = {version = "3.1", features = ["json"]}
serde_json = "1.0"
anyhow = "1.0"

[[bench]]
name = "bench"
harness = false

# [profile.dev.package."*"]
# opt-level = 3

[profile.release]
strip = true
# debug = 1 # for profiling
# lto = "thin"
# codegen-units = 1
# panic = "abort"

[build-dependencies]
winresource = "0.1.28"

[dev-dependencies]
criterion = "0.8.1"
