[package]
name = "tessera"
version = "0.1.0"
edition = "2024"

[dependencies]
tessera_audio = { path = "../tessera_audio" }

# mlua = { version = "0.11", features = ["luajit", "vendored"] }
mlua = { version = "0.11", features = ["luajit", "module"] }

winit = "0.29"
femtovg = {version="0.19.3", default-features = false, features=["image-loading"] }
image = { version = "0.25", default-features = false, features = ["png"] }
glutin =  "0.31.0"
glutin-winit = "0.4.0"
raw-window-handle = "0.5.0"

cosmic-text = "0.12.1"
swash = "0.1.19"

resource = "0.5"
