[package]
name = "tessera"
version = "0.1.0"
edition = "2024"

[dependencies]
tessera_audio = { path = "../tessera_audio" }
ringbuf = "0.4"
no_denormals = "0.3"
hound = "3.5"
assert_no_alloc = {version = "1.1", features = ["warn_debug"]}
log = "0.4"
fastrand = "2.0"

mlua = { version = "0.11", features = ["luajit", "vendored"] }

winit = "0.29"
femtovg = {version="0.19.3", default-features = false, features=["image-loading"] }
image = { version = "0.25", default-features = false, features = ["png"] }
glutin =  "0.31.0"
glutin-winit = "0.4.0"
raw-window-handle = "0.5.0"

cosmic-text = "0.15"
swash = "0.2"
unicode-script = "0.5.5"


